--- a/bttuan2/src/main/resources/templates/index.html
+++ b/bttuan2/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="http://localhost:8080/user-form">Add User</a>
+    <a href="/user-form">Add User</a>
 </body>
 </html>
