--- a/bttuan2/src/main/resources/templates/user_form.html
+++ b/bttuan2/src/main/resources/templates/user_form.html
@@ -14,5 +14,6 @@
     </form>
 
     <p th:text="${message}" style="color: green"></p>
+    <a th:href="@{/user}">Xem danh sách thành viên </a>
   </body>
 </html>
